--- a/style.css
+++ b/style.css
@@ -10,16 +10,23 @@ h1{color: black;}
 
 p{color: rgb(226, 75, 5);}
 
-ul{color: blue;}
-.listacabecalho-{
+
+
+.cabecalho{
+    background-color: aqua rgb(226, 75, 5);
     display: flex;
-    margin-left: 250px;
-    margin-top: 80px;
 }
-.listacabecalho-{
-    color: aqua;
-    padding-left: 20px;
-    text-transform: uppercase;
-    front: size 25px;
+.logo-porsche{
+    width: 100px;
+}
+.lista_cabecalho{
+    display: flex;
+    margin-left: 500px ;
+}
+.item_lista_cabecalho{
+    color: rgb(128, 40, 40);
     list-style: none;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding: 5px ;
 }
